# flow

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  gemini-extension.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.codex-plugin/: marketplace.json  plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: flow.js
commands/: flow-archive.md  flow-docs.md  flow-finish.md  flow-implement.md  flow-plan.md  flow-prd.md  flow-refresh.md  flow-research.md  flow-revert.md  flow-review.md  flow-revise.md  flow-setup.md  flow-status.md  flow-sync.md  flow-task.md  flow-validate.md
commands/flow/: archive.toml  block.toml  distill.toml  docs.toml  export.toml  formula.toml  handoff.toml  implement.toml  plan.toml  prd.toml  refresh.toml  research.toml  revert.toml  revise.toml  setup.toml  skip.toml  status.toml  sync.toml  task.toml  validate.toml  wisp.toml
hooks/: session-start
scripts/: install.sh
skills/advanced-alchemy/: SKILL.md
skills/alloydb/: SKILL.md
skills/alloydb-omni/: SKILL.md
skills/angular/: SKILL.md
skills/bash/: SKILL.md
skills/beads/: SKILL.md
skills/biome/: SKILL.md
skills/bun/: SKILL.md
skills/cloud-run/: SKILL.md
skills/cloud-sql/: SKILL.md
skills/consensus/: SKILL.md
skills/cpp/: SKILL.md
skills/cpp-ci-workflow/: SKILL.md
skills/cpp-design/: SKILL.md
skills/deepthink/: SKILL.md
skills/dishka/: SKILL.md
skills/docker/: SKILL.md
skills/duckdb/: SKILL.md
skills/duckdb-extension/: SKILL.md
skills/flow/: SKILL.md
skills/gcp/: SKILL.md
skills/gke/: SKILL.md
skills/granian/: SKILL.md
skills/hatch-mojo/: SKILL.md
skills/htmx/: SKILL.md
skills/inertia/: SKILL.md
skills/ipc/: SKILL.md
skills/litestar/: SKILL.md
skills/litestar-assets-cli/: SKILL.md
skills/litestar-vite/: SKILL.md
skills/litestar-vite-typegen/: SKILL.md
skills/makefile/: SKILL.md
skills/mojo/: SKILL.md
skills/msgspec/: SKILL.md
skills/mysql/: SKILL.md
skills/napi-rs/: SKILL.md
skills/nuxt/: SKILL.md
skills/oracle-26ai-container/: SKILL.md
skills/oracle-oci/: SKILL.md
templates/: workflow.md
tools/: install.sh
(+349 files in other folders)
