[project]
name = "flow"
version = "0.12.0"
description = "Unified toolkit for Context-Driven Development"
authors = [
  { name = "cofin" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.12.0"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to v{new_version}"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    ((?P<pre>a|b|rc)(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}{pre}{pre_n}", "{major}.{minor}.{patch}"]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

[tool.bumpversion.parts.pre]
first_value = "stable"
optional_value = "stable"
values = ["a", "b", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "gemini-extension.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/plugin.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = ".claude-plugin/marketplace.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = ".cursor-plugin/plugin.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = ".codex-plugin/plugin.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = "tools/install.sh"
replace = 'Version {new_version}'
search = 'Version {current_version}'
